--- a/FileSender.properties
+++ b/FileSender.properties
@@ -1,5 +1,5 @@
 sender.fileEncoding=UTF-8
-sender.messageFormat=XML_FORMAT
+sender.messageFormat=XML_FORMT
 sender.validateUsrXML=false
 
 sender.isPayloadValidXML=false
